--- a/Software/resources/views/experto/master.njk
+++ b/Software/resources/views/experto/master.njk
@@ -9,9 +9,11 @@
     <meta content='' name='keywords'>
     <link href="/css/application-a07755f5.css" rel="stylesheet" type="text/css" />
     <link href="/css/extras.css" rel="stylesheet" type="text/css" />
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link href="https://netdna.bootstrapcdn.com/font-awesome/3.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+	 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+   <link href="https://netdna.bootstrapcdn.com/font-awesome/3.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
     <link href="assets/images/favicon.ico" rel="icon" type="image/ico" />
+
+
     
   </head>
   <body class='main page'>
@@ -108,6 +110,7 @@
   <script type="text/javascript" src="/scripts/Sortable.min.js"> </script>
   <script type="text/javascript" src="/scripts/vuedraggable.js"> </script>
   <script type="text/javascript" src="/scripts/vue-resource.js"> </script>
+  <script type="text/javascript" src="/js/theme.js"></script>
 	{% if buttons %}
 	<script>
 		const id_ = {{id_}};
@@ -119,6 +122,3 @@
 	{% endif %}
   </body>
 </html>
-
-
-
